[package]
name = "liushu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }

liushu-core = { path = "liushu-core" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[workspace]
members = [
    "liushu-core",
    "liushu-ls",
    "liushu-ffi",
    "uniffi-bindgen",
]

[profile.bench]
lto = true

[profile.release]
lto = true
