[package]
name = "liushu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }

liushu-core = { path = "liushu-core" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[workspace]
members = [
    "liushu-core",
    "liushu-db-build",
    "liushu-ffi",
    "liushu-ls",
    "liushu-ngram",
    "uniffi-bindgen",
]

[workspace.dependencies]
redb = "1.0.5"
clap = { version = "4.2.4", features = ["derive"] }

[profile.bench]
lto = true

[profile.release]
lto = true
