[package]
name = "liushu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liushu-core = { path = "liushu-core" }
wayland-client = { version = "0.31.2" }
wayland-protocols = { version = "0.31.2", features = ["unstable", "client"] }
evdev = "0.12.1"
xdg = "2.5.2"
tempfile = "3.10.1"

[workspace]
members = [
    "liushu-core",
    "liushu-dict",
    "liushu-ffi",
    "liushu-ngram",
    "uniffi-bindgen",
]

[workspace.dependencies]
redb = "1.0.5"
clap = { version = "4.2.4", features = ["derive"] }

[profile.release]
lto = true
