[package]
name = "liushu-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
csv = "1.1"
anyhow = "1.0"
directories = "4.0.1"
once_cell = "1.17.1"
serde_dhall = "0.12.1"
