[package]
name = "liushu-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1"
directories = "4.0.1"
once_cell = "1.17.1"
serde_dhall = "0.12.1"
pinyin = "0.9.0"
redb = "0.13.0"
regex = "1.7.1"
itertools = "0.10.5"
thiserror = "1.0.39"
patricia_tree = { version = "0.5.5", features = ["serde"] }
bincode = "1.3.3"
